# simple-nautilus-extension

./: CMakeLists.txt  Makefile  plugin.c
